implemented dendrite pass for cat operator

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -12,22 +12,22 @@
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "cell (y<-) {y=((1:2):(4:5))]1;};" out:<bhvm_holor_adl_s> "(4:5)"       </> </> </>
     </> </>
 
-    <lion_net_eval_frame_s> jacobian_test: false  param: <lion_net_eval_param_s>
+    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
         name: "HOLOR SYNTAX 2" verbosity: -1
-        src:  "cell ( y <- a, b ) { y = a:b:2[2; };"  //TODO: dendrite pass for catenation
+        src:  "cell ( y <- a, b ) { y = a:b:2[2; };"
         in:<bhvm_holor_adl_s> "2[1" "2:3" </>
         out:<bhvm_holor_adl_s> "(1:1):(2:3):(2:2)" </>
     </> </>
 
-    <lion_net_eval_frame_s> jacobian_test: false  param: <lion_net_eval_param_s>
+    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
         name: "HOLOR SYNTAX 3" verbosity: -1
         src:  "cell ( y <- a, b ) { y = (a:b):(1:1); };"
         in:<bhvm_holor_adl_s> "1:2" "2:3" </>
         out:<bhvm_holor_adl_s> "(1:2):(2:3):(1:1)" </>
     </> </>
 
-    <lion_net_eval_frame_s> jacobian_test: false  param: <lion_net_eval_param_s>
-        name: "HOLOR SYNTAX 4" verbosity: -1
+    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
+        name: "HOLOR SYNTAX 4" verbosity: 10
         src:  "cell ( y <- a, b ) { y = (a:b)]1; };"
         in:<bhvm_holor_adl_s> "1:2" "2:3" </>
         out:<bhvm_holor_adl_s> "(2:3)" </>
