--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -6,73 +6,32 @@
     arr: <lion_net_eval_arr_s>
 
     <lion_net_eval_set_s> param: <lion_net_eval_param_s> verbosity: -1 name: "HOLOR LITERAL" </> arr: <lion_net_eval_arr_s>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "cell (y<-) {y=1:1;};"             out:<bhvm_holor_adl_s> "(1:1)"       </> </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "cell (y<-) {y=2[2;};"             out:<bhvm_holor_adl_s> "(2:2)"       </> </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "cell (y<-) {y=2[2[0;};"           out:<bhvm_holor_adl_s> "(0:0):(0:0)" </> </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "cell (y<-) {y=((1:2):(4:5))]1;};" out:<bhvm_holor_adl_s> "(4:5)"       </> </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=1:1;};"             out:"(1:1)"       </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=2[2;};"             out:"(2:2)"       </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=2[2[0;};"           out:"(0:0):(0:0)" </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=((1:2):(4:5))]1;};" out:"(4:5)"       </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y, z <-) {y=1; z=2;};"          out:"1,2"         </> </>
     </> </>
 
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "HOLOR SYNTAX 2" verbosity: -1
-        src:  "cell ( y <- a, b ) { y = a:b:2[2; };"
-        in:<bhvm_holor_adl_s> "2[1" "2:3" </>
-        out:<bhvm_holor_adl_s> "(1:1):(2:3):(2:2)" </>
+    <lion_net_eval_set_s> param: <lion_net_eval_param_s> name: "HOLOR SYNTAX" verbosity: -1 </> arr: <lion_net_eval_arr_s>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = a + b; };"                 in:"1:1, 2:2"     out: "3:3" </>  </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y,z <- a,b ) { y=a+b; z=b-a; };"              in:"1:1, 2:2"     out: "3:3, 1:1" </>  </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = a * b; };"                 in:"1:1, 2:2"     out: "2:2" </>  </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = a:b:2[2; };"               in:"2[1, 2:3"     out:"(1:1):(2:3):(2:2)"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = (a:b):(1:1); };"           in:"1:2, 2:3"     out:"(1:2):(2:3):(1:1)"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a )   { y = (2[2[a); };"               in:"1:2:3"        out: "((1:2:3):(1:2:3)):((1:2:3):(1:2:3))"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a )   { y = a + a + 1 + #; };"         in:"1"            out:"3" </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = b+a/( a~**a )^( 1/2 ); };" in:"(1:1), (1:1)" out:"(1.70711:1.70711)"  </> </>
     </> </>
 
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "HOLOR SYNTAX 3" verbosity: -1
-        src:  "cell ( y <- a, b ) { y = (a:b):(1:1); };"
-        in:<bhvm_holor_adl_s> "1:2" "2:3" </>
-        out:<bhvm_holor_adl_s> "(1:2):(2:3):(1:1)" </>
-    </> </>
-
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "HOLOR SYNTAX 4" verbosity: 10
-        src:  "cell ( y <- a, b ) { y = (a:b)]1; };"
-        in:<bhvm_holor_adl_s> "1:2" "2:3" </>
-        out:<bhvm_holor_adl_s> "(2:3)" </>
-    </> </>
-
-    <lion_net_eval_frame_s> jacobian_test: false  param: <lion_net_eval_param_s>
-        name: "HOLOR SYNTAX 5" verbosity: -1
-        src:  "cell ( y <- a ) { y = (2[a); };"   //TODO: dendrite pass for order increment
-        in:<bhvm_holor_adl_s> "2" </>
-        out:<bhvm_holor_adl_s> "(2:2)" </>
-    </> </>
-
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "PRESET SHAPE" verbosity: -1 epsilon: 1E-2
-        src:  "cell ( y <- a = 2[# ) { y = a; };"
-        in: <bhvm_holor_adl_s> "<f2_t>( 1:2 )" </>
-        out:<bhvm_holor_adl_s> "<f3_t>( 1:2 )" </>
-    </> </>
-
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "COPY" max_dev: 1E-4 epsilon: 1E-2
-        src:  "cell ( y <- a ) { y = a; };"
-        in: <bhvm_holor_adl_s> "<f2_t>( ( 1:2 ):( 3:4 ) )" </>
-        out:<bhvm_holor_adl_s> "<f2_t>( ( 1:2 ):( 3:4 ) )" </>
-    </> </>
-
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "ADD" verbosity: -1
-        src:  "cell ( y <- a ) { y = a + a + 1 + #; };"
-        in: <bhvm_holor_adl_s> "1" </>
-        out:<bhvm_holor_adl_s> "3" </>
-    </> </>
-
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "SCALAR OPERATIONS" verbosity: -1 max_dev: 1E-3
-        src:  "cell ( y <- a ) { y = exp( lgst( ( -( a - 3 ) * 5 * a + 5 ) + 16 ) + lgst( -1 ) ); };"
-        in: <bhvm_holor_adl_s> "4" </>
-        out:<bhvm_holor_adl_s> "2.718281828" </>
-    </> </>
-
-    <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
-        name: "HTP OPERATIONS" verbosity: -1 epsilon: 1E-3 max_dev: 1E-3
-        src:  "cell ( y <- a ) { y = a~~; };"
-        in: <bhvm_holor_adl_s> "<f2_t>( 1:2 ):( 3:4 )" </>
-        out:<bhvm_holor_adl_s> "<f2_t>( 1:2 ):( 3:4 )" </>
+    <lion_net_eval_set_s> param: <lion_net_eval_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2 </> arr: <lion_net_eval_arr_s>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"<f2_t>(1:2)"          out:"<f3_t>(1:2)" </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = a; };"       in:"<f2_t>((1:2):(3:4))"  out:"<f2_t>((1:2):(3:4))"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = exp( lgst((-(a-3)*5*a+5)+16 )+lgst(-1)); };" in: "4"  out:"2.718281828" </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = a~~; };"     in: "<f2_t>(1:2):(3:4)"     out:"<f2_t>(1:2):(3:4)"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = ( a~ ** a ); };"   in:  "(1:2):(3:4)"    out: "(10:14):(14:20)"   </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, <f2_t>2" out: "0.33333:0.5"       </> </>
     </> </>
 
     <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
@@ -91,7 +50,7 @@
                 y = ack( 3, 2 );
             }
         "
-        out:<bhvm_holor_adl_s> "29" </>
+        out:"29"
     </> </>
 
     <lion_net_eval_frame_s>
@@ -107,55 +66,10 @@
                 }
             "
 
-            in: <bhvm_holor_adl_s> "( 1 : 2 )" </>
-            out: <bhvm_holor_adl_s> "2.5" </>
+            in: "( 1 : 2 )"
+            out: "2.5"
         </>
 
-    </>
-
-    <lion_net_eval_frame_s>
-        param: <lion_net_eval_param_s>
-            name: "Frame" verbosity: -1 max_dev: 1E-4 epsilon: 1E-6
-            src: "( y <- a ) { y = ( a~ ** a ); };"
-            in: <bhvm_holor_adl_s> "(1:2):(3:4)" </>
-            out: <bhvm_holor_adl_s> "(10:14):(14:20)" </>
-        </>
-    </>
-
-    <lion_net_eval_frame_s>
-        param: <lion_net_eval_param_s>
-            name: "Frame" verbosity: -1
-            src: "( y <- a, b ) { y = b + a / ( a~ ** a ) ^ ( 1/2 ); };"
-            in: <bhvm_holor_adl_s> "(1:1)" "(1:1)" </>
-            out: <bhvm_holor_adl_s> "(1.70711:1.70711)" </>
-        </>
-    </>
-
-    <lion_net_eval_frame_s>
-        param: <lion_net_eval_param_s>
-            name: "Frame" verbosity: -1
-            src: "( y <- a, b ) { y = a + b; };"
-            in: <bhvm_holor_adl_s> "1:1" "2:2" </>
-            out: <bhvm_holor_adl_s> "3:3" </>
-        </>
-    </>
-
-    <lion_net_eval_frame_s>
-        param: <lion_net_eval_param_s>
-            name: "Frame" verbosity: -1
-            src: "( y <- a, b ) { y = a * b; };"
-            in: <bhvm_holor_adl_s> "1:1" "2:2" </>
-            out: <bhvm_holor_adl_s> "2:2" </>
-        </>
-    </>
-
-    <lion_net_eval_frame_s>
-        param: <lion_net_eval_param_s>
-            name: "Frame" verbosity: -1 max_dev: 1E-4
-            src: "( y <- a, b ) { y = a / ( b + a ); };"
-            in: <bhvm_holor_adl_s> "1:2" "<f2_t>2" </>
-            out: <bhvm_holor_adl_s> "0.33333:0.5" </>
-        </>
     </>
 
     <lion_net_eval_frame_s>
@@ -169,8 +83,8 @@
                     y = w ** a;
                 };
             "
-            in: <bhvm_holor_adl_s> "1:2" </>
-            out: <bhvm_holor_adl_s> "5:4" </>
+            in: "1:2"
+            out: "5:4"
         </>
         jacobian_test: true
     </>
