implemented adaptive; added abs-operator; testing and debugging

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -84,10 +84,40 @@
                 };
             "
             in: "1:2"
-            out: "5:4"
+            out:"5:4"
         </>
         jacobian_test: true
     </>
+
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame MLP" verbosity: 10 max_dev: 1E-4
+            src:
+            "
+                cell ( y <- a )
+                {
+                    cell layer( y <- hidden_nodes, a )
+                    {
+                        adaptive w = random( hidden_nodes [ dimof( a ) [ # );
+                        adaptive b = hidden_nodes [ 0;
+                        q = w ** a + b;
+
+                        adaptive c = 0.5;
+
+                        // switch between activation functions
+                        y = c * tanh( q ) + ( 1 - c ) * relu( q );
+                    };
+
+                    y =	layer( 1 ) <: layer( 16 ) <: layer( 16 ) <: layer( 16, a );
+                }
+            "
+            in: "32[1"
+            //out:"5"
+        </>
+        jacobian_test: true
+    </>
+
+
 
     </>
 </>
