--- a/training/lion_test01.cfg
+++ b/training/lion_test01.cfg
@@ -11,26 +11,27 @@
         </>
 
     builder:
-        <haptive_vm_builder_s>
+        <lion_adaptive_builder_s>
             src: <st_s>
             "
-                verify_signature ( y => dim_y, a );
-
-                cell layer( y => hidden_nodes, a )
+                cell ( y <- a )
                 {
-                    adaptive w = random( [ hidden_nodes ][ dimof( a ) ]# );
-                    adaptive b = [ hidden_nodes ]0;
-                    q = w ** a + b;
+                    cell layer( y <- hidden_nodes, a )
+                    {
+                        adaptive w = random( hidden_nodes [ dimof( a ) [ f2( # ) );
+                        adaptive b = hidden_nodes [ f2( 0 );
+                        q = w ** a + b;
 
-                    adaptive c = 0.5;
+                        //adaptive c = 0.5;
 
-                    // switch between activation functions
-                    //y = c * tanh( q ) + ( 1 - c ) * relu( q );
-                    y = q;
-                };
+                        // switch between activation functions
+                        //y = c * tanh( q ) + ( 1 - c ) * relu( q );
+                        y = q;
+                    };
 
-                y =	tanh : layer( dim_y ) : relu_leaky : layer( 16 ) : relu_leaky : layer( 16 ) : relu_leaky : layer( 16, a );
-                //y =	layer( dim_y ) : layer( 16 ) : layer( 16 ) : layer( 16, a );
+                    y =	tanh <: layer( 1 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16, f2( a ) );
+                    //y =	layer( 1 ) <: layer( 16 ) <: layer( 16 ) <: layer( 16, a );
+                }
             "           </>
 
             in_size :<sz_t>32</>
@@ -42,7 +43,6 @@
                 lambda_l2:<f3_t>0</>
             </>
         </>
-
 
     guide:
         <badapt_guide_std_s>
