moved frame to dedicated file

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -7,6 +7,7 @@
 
     <lion_net_eval_set_s> param: <lion_net_eval_param_s> verbosity: -1 name: "HOLOR LITERAL" </> arr: <lion_net_eval_arr_s>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=1:1;};"             out:"(1:1)"       </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=1[1::2[2;};"        out:"(1:2:2)"     </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=2[2;};"             out:"(2:2)"       </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=2[2[0;};"           out:"(0:0):(0:0)" </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"(y<-)     {y=((1:2):(4:5))]1;};" out:"(4:5)"       </> </>
@@ -26,12 +27,12 @@
     </> </>
 
     <lion_net_eval_set_s> param: <lion_net_eval_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2 </> arr: <lion_net_eval_arr_s>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"<f2_t>(1:2)"          out:"<f3_t>(1:2)" </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = a; };"       in:"<f2_t>((1:2):(3:4))"  out:"<f2_t>((1:2):(3:4))"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"f2_t(1:2)"          out:"f3_t(1:2)" </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = a; };"       in:"f2_t((1:2):(3:4))"  out:"f2_t((1:2):(3:4))"  </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = exp( lgst((-(a-3)*5*a+5)+16 )+lgst(-1)); };" in: "4"  out:"2.718281828" </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = a~~; };"     in: "<f2_t>(1:2):(3:4)"     out:"<f2_t>(1:2):(3:4)"  </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = a~~; };"     in: "f2_t((1:2):(3:4))"     out:"f2_t((1:2):(3:4))"  </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a ) { y = ( a~ ** a ); };"   in:  "(1:2):(3:4)"    out: "(10:14):(14:20)"   </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, <f2_t>2" out: "0.33333:0.5"       </> </>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, f2_t(2)" out: "0.33333:0.5"       </> </>
     </> </>
 
     <lion_net_eval_frame_s> param: <lion_net_eval_param_s>
@@ -91,7 +92,7 @@
 
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
-            name: "Frame MLP" verbosity: 10 max_dev: 1E-4
+            name: "Frame MLP" verbosity: -1 max_dev: 1E-4
             src:
             "
                 cell ( y <- a )
@@ -112,11 +113,30 @@
                 }
             "
             in: "32[1"
-            //out:"5"
+            out:"1[-0.10596"
         </>
         jacobian_test: true
     </>
 
+
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame recurrent" verbosity: 10 max_dev: 1E-4
+            src:
+            "
+                ( y <- a )
+                {
+                    recurrent r = 1;
+                    r = a + r;
+                    y = r;
+                };
+            "
+            in: "1"
+            out:"11"
+        </>
+        jacobian_test: false
+        recurrent_cycles: 10
+    </>
 
 
     </>
