--- a/eval/lion_nop_eval_set_01.cfg
+++ b/eval/lion_nop_eval_set_01.cfg
@@ -2,24 +2,24 @@
     param: <lion_nop_eval_param_s> verbosity:1 </>
     arr: <lion_nop_eval_arr_s>
 
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_identity_s></>   ha:"<f2_t>2"    hr:"<f2_t>2" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_neg_s></>        ha:"<f2_t>2"    hr:"<f2_t>-2" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_floor_s></>      ha:"<f2_t>2.5"  hr:"<f2_t>2.0" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_ceil_s></>       ha:"<f2_t>2.5"  hr:"<f2_t>3.0" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_exp_s></>        ha:"<f2_t>0"    hr:"<f2_t>1" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_inv_s></>        ha:"<f2_t>2"    hr:"<f2_t>0.5" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_s></>       ha:"<f2_t>0"    hr:"<f2_t>0.5" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  ha:"<f2_t>1"    hr:"<f2_t>0.75" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_leaky_s></> ha:"<f2_t>1"    hr:"<f2_t>0.75" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_s></>       ha:"<f2_t>0"    hr:"<f2_t>0" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_hard_s></>  ha:"<f2_t>2"    hr:"<f2_t>1" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_leaky_s></> ha:"<f3_t>2"    hr:"<f3_t>1.01" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_softplus_s></>   ha:"<f2_t>-100" hr:"<f2_t>0" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_s></>       ha:"<f2_t>-1"   hr:"<f2_t>0" </> </>
-    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> ha:"<f3_t>-1"   hr:"<f3_t>-0.01" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_identity_s></>   ha:"f2_t(2)"    hr:"f2_t(2)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_neg_s></>        ha:"f2_t(2)"    hr:"f2_t(-2)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_floor_s></>      ha:"f2_t(2.5)"  hr:"f2_t(2.0)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_ceil_s></>       ha:"f2_t(2.5)"  hr:"f2_t(3.0)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_exp_s></>        ha:"f2_t(0)"    hr:"f2_t(1)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_inv_s></>        ha:"f2_t(2)"    hr:"f2_t(0.5)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_s></>       ha:"f2_t(0)"    hr:"f2_t(0.5)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  ha:"f2_t(1)"    hr:"f2_t(0.75)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_leaky_s></> ha:"f2_t(1)"    hr:"f2_t(0.75)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_s></>       ha:"f2_t(0)"    hr:"f2_t(0)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_hard_s></>  ha:"f2_t(2)"    hr:"f2_t(1)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_leaky_s></> ha:"f3_t(2)"    hr:"f3_t(1.01)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_softplus_s></>   ha:"f2_t(-100)" hr:"f2_t(0)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_s></>       ha:"f2_t(-1)"   hr:"f2_t(0)" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> ha:"f3_t(-1)"   hr:"f3_t(-0.01)" </> </>
 
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>1" hb:"1" hr:"1" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>1[1[1" hb:"1[1[1" hr:"1[1[1" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"f2_t(1)" hb:"1" hr:"1" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"f2_t(1[1[1)" hb:"1[1[1" hr:"1[1[1" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"3" hr:"(3:6)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2):(2:1)" hb:"(3:2)" hr:"(3:4):(6:2)" </> </>
 
@@ -27,9 +27,9 @@
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2)"  hb: "2"      hr: "(5:4)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2):(3:2)"  hb: "(2:1)" hr: "(5:3):(5:3)" </> </>
 
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f2_t>(5:3)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f3_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f3_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"f2_t(3:2)" hb:"f2_t(2:1)" hr:"f2_t(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"f2_t(3:2)" hb:"f3_t(2:1)" hr:"f3_t(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"f3_t(3:2)" hb:"f2_t(2:1)" hr:"f3_t(5:3)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></>  ha:"(3:2)" hb:"(2:1)" hr:"(1:1)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></>  ha:"(4:4)" hb:"(2:1)" hr:"(2:4)" </> </>
 
@@ -37,8 +37,8 @@
 
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"(2:2)" hr:"(2:4)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"3" hb:"(1:2)" hr:"(3:6)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>(1:2)" hb:"((2:3:1):(4:5:2))" hr:"<htp>(10:13:5)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>((2:3:1):(4:5:2))" hb:"(1:2)" hr:"(10:13:5)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"(1:2)~" hb:"((2:3:1):(4:5:2))" hr:"(10:13:5)~" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"((2:3:1):(4:5:2))~" hb:"(1:2)" hr:"(10:13:5)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"((2:3):(4:5):(1:1))" hb:"(1:2)" hr:"(8:14:3)" </> </>
 
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_pow_s></>  ha:"(1:2:3)" hb:"2" hr:"(1:4:9)" </> </>
@@ -93,6 +93,8 @@
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></> </> </>
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></> </> </>
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_pow_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_cat_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_ccat_s></> </> </>
             </>
         </>
     </>
