--- a/training/lion_test01.cfg
+++ b/training/lion_test01.cfg
@@ -18,8 +18,8 @@
                 {
                     cell layer( y <- hidden_nodes, a )
                     {
-                        adaptive w = random( hidden_nodes [ dimof( a ) [ f2( # ) );
-                        adaptive b = hidden_nodes [ f2( 0 );
+                        adaptive w = random( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                        adaptive b = hidden_nodes [ f2_t( 0 );
                         q = w ** a + b;
 
                         //adaptive c = 0.5;
@@ -29,7 +29,7 @@
                         y = q;
                     };
 
-                    y =	tanh <: layer( 1 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16, f2( a ) );
+                    y =	tanh <: layer( 1 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16, f2_t( a ) );
                     //y =	layer( 1 ) <: layer( 16 ) <: layer( 16 ) <: layer( 16, a );
                 }
             "           </>
