experimented with unrolling

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -126,8 +126,9 @@
             "
                 ( y <- a )
                 {
-                    recurrent r = 1;
-                    r = a + r;
+                    //recurrent r = 1;
+                    //r = a + r;
+                    r = a + 1;
                     y = r;
                 };
             "
@@ -136,6 +137,7 @@
         </>
         jacobian_test: false
         recurrent_cycles: 10
+        unrolled_cycles: 2
     </>
 
 
