work on frame unrolling

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -15,12 +15,12 @@
     </> </>
 
     <lion_net_eval_set_s> param: <lion_net_eval_param_s> name: "HOLOR SYNTAX" verbosity: -1 </> arr: <lion_net_eval_arr_s>
+        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = a + b; };"                 in:"1:1, 2:2"     out: "3:3" </>  </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y,z <- a,b ) { y=a+b; z=b-a; };"              in:"1:1, 2:2"     out: "3:3, 1:1" </>  </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = a * b; };"                 in:"1:1, 2:2"     out: "2:2" </>  </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = a:b:2[2; };"               in:"2[1, 2:3"     out:"(1:1):(2:3):(2:2)"  </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = (a:b):(1:1); };"           in:"1:2, 2:3"     out:"(1:2):(2:3):(1:1)"  </> </>
-        <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a )   { y = (2[2[a); };"               in:"1:2:3"        out: "((1:2:3):(1:2:3)):((1:2:3):(1:2:3))"  </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a )   { y = a + a + 1 + #; };"         in:"1"            out:"3" </> </>
         <lion_net_eval_frame_s> param: <lion_net_eval_param_s> src:"( y   <- a,b ) { y = b+a/( a~**a )^( 1/2 ); };" in:"(1:1), (1:1)" out:"(1.70711:1.70711)"  </> </>
@@ -70,7 +70,6 @@
             in: "( 1 : 2 )"
             out: "2.5"
         </>
-
     </>
 
     <lion_net_eval_frame_s>
@@ -126,9 +125,8 @@
             "
                 ( y <- a )
                 {
-                    //recurrent r = 1;
-                    //r = a + r;
-                    r = a + 1;
+                    recurrent r = 1;
+                    r = a + r;
                     y = r;
                 };
             "
@@ -137,7 +135,6 @@
         </>
         jacobian_test: false
         recurrent_cycles: 10
-        unrolled_cycles: 2
     </>
 
 
