--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -117,24 +117,27 @@
         jacobian_test: true
     </>
 
-
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
             name: "Frame recurrent" verbosity: 10 max_dev: 1E-4
-            src:
-            "
-                ( y <- a )
-                {
-                    recurrent r = 1;
-                    r = a + r;
-                    y = r;
-                };
-            "
+            src: "( y <- a ) { recurrent r = 0; r = a + r; y = r; };"
             in: "1"
-            out:"11"
+//            out:"11"
         </>
         jacobian_test: false
-        recurrent_cycles: 10
+        recurrent_cycles: 5
+    </>
+
+    <lion_net_eval_frame_ur_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame recurrent" verbosity: 10 max_dev: 1E-4
+            src: "( y <- a ) { recurrent r = 0; r = a + r; y = r; };"
+            in: "1"
+//            out:"11"
+        </>
+        jacobian_test: false
+        unroll_size: 3
+        recurrent_cycles: 5
     </>
 
 
