redesigned node and holor structure; work on recurrent processing

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -120,21 +120,22 @@
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
             name: "Frame recurrent" verbosity: 10 max_dev: 1E-4
-            src: "( y <- a ) { recurrent r = 0; r = a + r; y = r; };"
+            src: "( y <- a ) { recurrent r = 0; q = a + r; r = q; y = q; };"
+//            src: "( y <- a ) { adaptive r = 0; y = a + r; };"
             in: "1"
 //            out:"11"
         </>
         jacobian_test: false
         recurrent_cycles: 5
     </>
-
+//
 //    <lion_net_eval_frame_ur_s>
 //        param: <lion_net_eval_param_s>
 //            name: "Frame recurrent" verbosity: 20 max_dev: 1E-4
-//            src: "( y <- a ) { recurrent r = 0; r = a + r; y = r; };"
-//            in: "1, 1, 1, 1, 1"
+//            src: "( y <- a ) { recurrent r = 2; q = a * r; r = q; y = q; };"
+//            in: "1, 2"
 //        </>
-//        jacobian_test: false
+//        jacobian_test: true
 //    </>
 
     </>
