working on mcode generation

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -56,6 +56,27 @@
 
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
+            name: "FIBONNACCI" verbosity: -1
+            src:
+            "
+                cell ( y <- )
+                {
+                    recurrent f0 = 0;
+                    recurrent f1 = 1;
+                    y = f1;
+                    fnext = f0 + f1;
+                    f0 = f1;
+                    f1 = fnext;
+                }
+            "
+            out:"144"
+        </>
+        jacobian_test: false
+        recurrent_cycles: 12
+    </>
+
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
             name: "ADAPT (Vector)" verbosity: -1
 
             src:
@@ -119,24 +140,25 @@
 
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
-            name: "Frame recurrent" verbosity: 10 max_dev: 1E-4
-            src: "( y <- a ) { recurrent r = 0; q = a + r; r = q; y = q; };"
+            name: "Frame recurrent" verbosity: 0 max_dev: 1E-4
+            src: "( y <- a ) { recurrent r = 1; q = a + r; r = q; y = q; };"
 //            src: "( y <- a ) { adaptive r = 0; y = a + r; };"
             in: "1"
-//            out:"11"
+            out:"6"
         </>
         jacobian_test: false
         recurrent_cycles: 5
     </>
-//
-//    <lion_net_eval_frame_ur_s>
-//        param: <lion_net_eval_param_s>
-//            name: "Frame recurrent" verbosity: 20 max_dev: 1E-4
-//            src: "( y <- a ) { recurrent r = 2; q = a * r; r = q; y = q; };"
-//            in: "1, 2"
-//        </>
-//        jacobian_test: true
-//    </>
+
+
+    <lion_net_eval_frame_ur_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame recurrent" verbosity: 20 max_dev: 1E-4
+            src: "( y <- a ) { recurrent r = 1; q = a * r; r = q; y = q; };"
+            in: "1, 2, 3"
+        </>
+        jacobian_test: true
+    </>
 
     </>
 </>
