work on mcode generation; renamed recurrent -> cyclic; testing

--- a/training/lion_test02.cfg
+++ b/training/lion_test02.cfg
@@ -11,28 +11,25 @@
         </>
 
     builder:
-        <haptive_vm_builder_s>
-            src: <st_s>
-            "
-                verify_signature ( y => dim_y, a );
-
-                cell layer( y => hidden_nodes, a )
+        <lion_adaptive_builder_s>
+            src: <st_s> "
+                cell ( y <- a )
                 {
-                    adaptive w = random( [ hidden_nodes ][ dimof( a ) ]# );
-                    adaptive b = [ hidden_nodes ]0;
-                    q = w ** a + b;
+                    cell layer( y <- hidden_nodes, reduction, a )
+                    {
+                        adaptive w = random( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                        adaptive b = hidden_nodes [ f2_t( 0 );
+                        q = w ** a + b;
 
-                    adaptive c = 0.5;
+                        // switch between activation functions
+                        adaptive c = 0.5;
+                        r = c * tanh( q ) + ( 1 - c ) * relu( q );
 
-                    // switch between activation functions
-                    //y = c * tanh( q ) + ( 1 - c ) * relu( q );
-                    y = q;
-                };
-
-                y =	tanh : layer( dim_y ) : relu_leaky : layer( 16 ) : relu_leaky : layer( 16 ) : relu_leaky : layer( 16, a );
-
-                //y =	layer( dim_y ) : layer( 16 ) : layer( 16 ) : layer( 16, a );
-            "           </>
+                        y = if( hidden_nodes == 1 ) then r else layer( ceil( hidden_nodes * reduction ), reduction, r );
+                    };
+                    y =	layer( 16, 0.5, a );
+                }
+            " </>
 
             in_size :<sz_t>32</>
             out_size:<sz_t>1</>
@@ -43,7 +40,6 @@
                 lambda_l2:<f3_t>0</>
             </>
         </>
-
 
     guide:
         <badapt_guide_std_s>
