renamed frame_ur -> frame_cyclic

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -61,8 +61,8 @@
             "
                 cell ( y <- )
                 {
-                    recurrent f0 = 0;
-                    recurrent f1 = 1;
+                    cyclic f0 = 0;
+                    cyclic f1 = 1;
                     y = f1;
                     fnext = f0 + f1;
                     f0 = f1;
@@ -72,7 +72,7 @@
             out:"144"
         </>
         jacobian_test: false
-        recurrent_cycles: 12
+        cyclic_cycles: 12
     </>
 
     <lion_net_eval_frame_s>
@@ -140,20 +140,20 @@
 
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
-            name: "Frame recurrent" verbosity: 0 max_dev: 1E-4
-            src: "( y <- a ) { recurrent r = 1; q = a + r; r = q; y = q; };"
+            name: "Frame cyclic" verbosity: 0 max_dev: 1E-4
+            src: "( y <- a ) { cyclic r = 1; q = a + r; r = q; y = q; };"
 //            src: "( y <- a ) { adaptive r = 0; y = a + r; };"
             in: "1"
             out:"6"
         </>
         jacobian_test: false
-        recurrent_cycles: 5
+        cyclic_cycles: 5
     </>
 
-    <lion_net_eval_frame_ur_s>
+    <lion_net_eval_frame_cyclic_s>
         param: <lion_net_eval_param_s>
-            name: "Frame recurrent" verbosity: 20 max_dev: 1E-4
-            src: "( y <- a ) { recurrent r = 1; q = a * r; r = q; y = q; };"
+            name: "Frame cyclic" verbosity: 20 max_dev: 1E-4
+            src: "( y <- a ) { cyclic r = 1; q = a * r; r = q; y = q; };"
             in: "1, 2, 3"
         </>
         jacobian_test: true
