--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,10 +3,10 @@
  */
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
-//    <#file> "../eval/lion_nop_eval_set_01.cfg" </>
-//    <#file> "../eval/lion_net_eval_set_01.cfg" </>
+    <#file> "../eval/lion_nop_eval_set_01.cfg" </>
+    <#file> "../eval/lion_net_eval_set_01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
-    <#file> "../training/lion_test02.cfg" </>
+//    <#file> "../training/lion_test02.cfg" </>
 
 </></>
