keyword management: switched from bcore_arr_tp_s to bcore_hmap_tp_s

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -225,27 +225,30 @@
             "
                 cell ( y <- a )
                 {
-                    cell layer( co, ho  <-  dim_h, x, ci, hi )
+                    cell layer( co, ho  <-  a, ci, hi )
                     {
+                        dim_a = dimof( a );
+                        dim_h = dimof( hi );
+
                         // adaptive holors
-                        adaptive w_fx = random( dim_h [ dimof( x  ) [ # );
-                        adaptive w_fh = random( dim_h [ dimof( hi ) [ # );
-                        adaptive w_ix = random( dim_h [ dimof( x  ) [ # );
-                        adaptive w_ih = random( dim_h [ dimof( hi ) [ # );
-                        adaptive w_ox = random( dim_h [ dimof( x  ) [ # );
-                        adaptive w_oh = random( dim_h [ dimof( hi ) [ # );
-                        adaptive w_qx = random( dim_h [ dimof( x  ) [ # );
-                        adaptive w_qh = random( dim_h [ dimof( hi ) [ # );
+                        adaptive w_fx = random( dim_h [ dim_a [ # );
+                        adaptive w_fh = random( dim_h [ dim_h [ # );
+                        adaptive w_ix = random( dim_h [ dim_a [ # );
+                        adaptive w_ih = random( dim_h [ dim_h [ # );
+                        adaptive w_ox = random( dim_h [ dim_a [ # );
+                        adaptive w_oh = random( dim_h [ dim_h [ # );
+                        adaptive w_qx = random( dim_h [ dim_a [ # );
+                        adaptive w_qh = random( dim_h [ dim_h [ # );
 
                         adaptive b_f = dim_h [ 0;
                         adaptive b_i = dim_h [ 0;
                         adaptive b_o = dim_h [ 0;
                         adaptive b_q = dim_h [ 0;
 
-                        v_f = lgst( ( w_fx ** x ) + ( w_fh ** hi ) + b_f );
-                        v_i = lgst( ( w_ix ** x ) + ( w_ih ** hi ) + b_i );
-                        v_o = lgst( ( w_ox ** x ) + ( w_oh ** hi ) + b_o );
-                        v_q = tanh( ( w_qx ** x ) + ( w_qh ** hi ) + b_q );
+                        v_f = lgst( ( w_fx ** a ) + ( w_fh ** hi ) + b_f );
+                        v_i = lgst( ( w_ix ** a ) + ( w_ih ** hi ) + b_i );
+                        v_o = lgst( ( w_ox ** a ) + ( w_oh ** hi ) + b_o );
+                        v_q = tanh( ( w_qx ** a ) + ( w_qh ** hi ) + b_q );
 
                         co_ = ( v_f * ci ) + ( v_i * v_q );
 
@@ -256,7 +259,7 @@
                         ho = ( v_o * v_d );
                     };
 
-                    cell lstm( y <- dim_h, x )
+                    cell lstm( y <- dim_h, a )
                     {
                         adaptive w_r = random( dim_h [ dim_h [ # );
                         adaptive b_r = dim_h [ #;
@@ -264,7 +267,7 @@
                         cyclic c = dim_h [ 0;
                         cyclic h = dim_h [ 0;
 
-                        cell l1 = layer( dim_h, x, ci = c, hi = h );
+                        cell l1 = layer( a, c, h );
 
                         h = l1.ho;
                         c = l1.co;
