allowed use of exit channel after it was defined

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -225,10 +225,13 @@
             "
                 cell ( y <- a )
                 {
-                    cell layer( co, ho  <-  a, ci, hi )
+                    cell layer( y <- dim_h, a )
                     {
+
+                        cyclic c = dim_h [ 0;
+                        cyclic h = dim_h [ 0;
+
                         dim_a = dimof( a );
-                        dim_h = dimof( hi );
 
                         // adaptive holors
                         adaptive w_fx = random( dim_h [ dim_a [ # );
@@ -245,34 +248,24 @@
                         adaptive b_o = dim_h [ 0;
                         adaptive b_q = dim_h [ 0;
 
-                        v_f = lgst( ( w_fx ** a ) + ( w_fh ** hi ) + b_f );
-                        v_i = lgst( ( w_ix ** a ) + ( w_ih ** hi ) + b_i );
-                        v_o = lgst( ( w_ox ** a ) + ( w_oh ** hi ) + b_o );
-                        v_q = tanh( ( w_qx ** a ) + ( w_qh ** hi ) + b_q );
+                        v_f = lgst( ( w_fx ** a ) + ( w_fh ** h ) + b_f );
+                        v_i = lgst( ( w_ix ** a ) + ( w_ih ** h ) + b_i );
+                        v_o = lgst( ( w_ox ** a ) + ( w_oh ** h ) + b_o );
+                        v_q = tanh( ( w_qx ** a ) + ( w_qh ** h ) + b_q );
 
-                        co_ = ( v_f * ci ) + ( v_i * v_q );
+                        c_ = ( v_f * c ) + ( v_i * v_q );
 
-                        co  = co_;
+                        y = ( v_o * tanh( c_ ) );
+                        h = y;
 
-                        v_d = tanh( co_ );
-
-                        ho = ( v_o * v_d );
+                        c = c_;
                     };
 
                     cell lstm( y <- dim_h, a )
                     {
                         adaptive w_r = random( dim_h [ dim_h [ # );
                         adaptive b_r = dim_h [ #;
-
-                        cyclic c = dim_h [ 0;
-                        cyclic h = dim_h [ 0;
-
-                        cell l1 = layer( a, c, h );
-
-                        h = l1.ho;
-                        c = l1.co;
-
-                        y = tanh( w_r ** l1.ho + b_r );
+                        y = tanh( w_r ** layer( dim_h, a ) + b_r );
                     };
 
                     y = lstm( 2, a );
