worked on adaptive which can train cyclic networks

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -261,14 +261,14 @@
                         c = c_;
                     };
 
-                    cell lstm( y <- dim_h, a )
+                    cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = random( dim_h [ dim_h [ # );
-                        adaptive b_r = dim_h [ #;
+                        adaptive w_r = random( dim_out [ dim_h [ # );
+                        adaptive b_r = dim_out [ #;
                         y = tanh( w_r ** layer( dim_h, a ) + b_r );
                     };
 
-                    y = lstm( 2, a );
+                    y = lstm( 2, 4, a );
                 };
             "
             in: "1:1, 1:2, 2:1, 3:2"
