cyclic networks: testing/debugging

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -9,4 +9,11 @@
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
 
+//    <#file> "../dev/kjv/hard_lstm_v0.cfg" </>
+//    <#file> "../dev/kjv/hard_lstm_v2.cfg" </>
+
+//    <#file> "../dev/kjv/lion_lstm_v0.cfg" </>
+//    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
+//    <#file> "../dev/kjv/lion_lstm_v3.cfg" </>
+
 </></>
