--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -265,7 +265,7 @@
                     {
                         adaptive w_r = random( dim_out [ dim_h [ # );
                         adaptive b_r = dim_out [ #;
-                        y = tanh( w_r ** layer( dim_h, a ) + b_r );
+                        y = softmax( w_r ** layer( dim_h, a ) + b_r );
                     };
 
                     y = lstm( 2, 4, a );
