--- a/eval/lion_nop_eval_set_01.cfg
+++ b/eval/lion_nop_eval_set_01.cfg
@@ -86,6 +86,7 @@
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_softplus_s></>   </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_s></>       </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_softmax_s></>    </> </>
 
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></> </> </>
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> </> </>
